  - SDL2: Added get/set clipboard text support.

- CPU / CPUDB
  - Bugfixes for CPU emulation correctness (critical bugfix for x86-64 and AVX opcodes emulation,
    fixed assertion failures in proc_ctrl.cc)
  ! VMX: Implemented Page Modification Logging (PML)
  ! VMX: Implemented TSC Scaling Extension
  ! Paging: Implemented Protection Keys
  ! Implemented UMIP: User Mode Instruction Prevention (don't allow execution of SLDT/SIDT/SGDT/STR/SMSW with CPL>0)
  ! Implemented RDPID instruction
  ! Implemented VPOPCNTD/VPOPCNTQ AVX512 instructions
  ! CPUDB: Added AMD Ryzen configuration to CPUDB

- I/O Devices
  - Busmouse
    - Added standard bus mouse support in addition to the existing InPort
      emulation code. (patch by Ben Lunt).
  - Hard drive
    - Implemented lock mechanism for hard disk images. An image that is opened
      in r/w mode cannot be used multiple times (e.g. by another Bochs session).
    - Several fixes in some disk image modes.
  - Serial / Parallel ports
    - Added support for changing output file at runtime.
  - Networking
    - Added ethernet module 'socket', designed to interconnect Bochs instances
      with external program 'bxhub' (simulating a multi-port ethernet hub).
    - Now creating separate plugins for each network driver implementation
      (slirp, win32, etc.).
  - Sound
    - Added PCM output data resampling in a separate thread. The resampler
      requires either libsamplerate or the SoX resampler library installed.
    - SDL: Added audio capture support (requires library version >= 2.0.5).
    - Now creating separate plugins for each sound driver (alsa, win, etc.).
  - USB
    - Added USB EHCI device emulation support (EHCI core ported from Qemu).
    - Added USB floppy (UFI/CBI) support (patch by Ben Lunt).
    - Added asynchronus USB packet completion support (needed by disk/cdrom
      seek and read/write latency emulation).
    - Implemented USB remote wakeup mechanism.